Beamer: put hyperlink after `\begin{frame}`.
and not in the title.  If it's in the title, then we get
a titlebar on slides with the `plain` attribute, when
the id is non-null.  This fixes a regression from 1.9.x.

Closes #4307.

--- a/test/command/1710.md
+++ b/test/command/1710.md
@@ -54,9 +54,8 @@ ok
 </div>
 </div>
 ^D
-\begin{frame}{%
-\protect\hypertarget{slide-one}{%
-Slide one}}
+\begin{frame}{Slide one}
+\protect\hypertarget{slide-one}{}
 
 \begin{columns}[T]
 \begin{column}{0.40\textwidth}
