--- a/test/command/4016.md
+++ b/test/command/4016.md
@@ -13,9 +13,8 @@ pandoc -t beamer
 </div>
 </div>
 ^D
-\begin{frame}{%
-\protect\hypertarget{level-2-blocks}{%
-Level 2 blocks}}
+\begin{frame}{Level 2 blocks}
+\protect\hypertarget{level-2-blocks}{}
 
 \begin{columns}[T]
 \begin{column}{0.40\textwidth}
