--- a/changelog
+++ b/changelog
@@ -68,6 +68,8 @@ pandoc (2.1.3)
     the `plain` attribute, when the id is non-null.  This fixes a regression
     in 2.0.
 
+  * EPUB writer: Remove notes from TOC in nav.xhtml (#4453, Mauro Bieg).
+
   * JATS writer: Remove extraneous, significant whitespace (#4335,
     Nokome Bentley).
 
@@ -84,8 +86,11 @@ pandoc (2.1.3)
     + Text.Pandoc.Pretty.Doc.
     + Text.Pandoc.MediaBag.MediaBag.
 
-  * Add custom prelude to give clean code for Monoid and Semigroup
-    that works with GHC 7.10-8.4.
+  * Add custom Prelude to give clean code for Monoid and Semigroup
+    that works with ghc 7.10-8.4.  The custom Prelude (`prelude/Prelude`)
+    is used for ghc versions < 8.4.  `NoImplicitPrelude` is used
+    in all source files, and Prelude is explicitly imported
+    (this is necessary for ghci to work properly with the custom prelude).
 
   * Text.Pandoc.Writers.Shared (Francesco Occhipinti):
 
@@ -110,12 +115,26 @@ pandoc (2.1.3)
     If the ICC profiles are not available the log will contain error
     messages.
 
-  * Use latest pandoc-types, skylighting.
+  * Use latest pandoc-types, skylighting
+
+  * Use latest pandoc-citeproc in binary package.
 
   * Bump upper bound for time, criterion, haddock-library, exceptions,
     http-types, aeson, haddock-library.
 
   * Bump upper bound tasty-quickcheck 0.10 (#4429, Felix Yan).
+
+  * pandoc.cabal:  fix up other-extensions and language fields.
+    Language is now consistently `Haskell2010`, and other-extensions
+    is consistently `NoImplicitPrelude`. Everything else to be specified
+    in the module header as needed.
+
+  * Removed `old-locale` flag and Text.Pandoc.Compat.Time.
+    This is no longer necessary since we no longer support ghc 7.8.
+
+  * Make `weigh-pandoc` into a benchmark program.
+    Remove `weigh-pandoc` flag.  `weigh-pandoc` is now built (and run)
+    automatically when you build (and run) benchmarks.
 
   * MANUAL: add instructions for background images reveal.js (#4325, John
     Muccigrosso).
