Fix problems with footnote display on Kindles
1. Backlinks must be at the start of the footnote or it causes Kindle
   software to mangle the display of footnotes (several footnotes are
   run together, and soft footnote links do not work as pop-overs).
2. Also, Amazon "strongly recommends" the use of the `aside` element.
   This is also recommended by Apple. So when using EPUB3 or HTML5, use
   `aside` elements instead of a list.

   Due to part 1, we have numbered backlinks at the start of footnotes,
   so I also changed EPUB2 to wrap with `div` (instead of `aside`) to
   remove the redundant numbering, and to be consistent with EPUB3
   output.

--- a/test/command/4235.md
+++ b/test/command/4235.md
@@ -5,8 +5,6 @@ This.^[Has a footnote.]
 <p>This.<a href="#foofn1" class="footnote-ref" id="foofnref1"><sup>1</sup></a></p>
 <section class="footnotes">
 <hr />
-<ol>
-<li id="foofn1"><p>Has a footnote.<a href="#foofnref1" class="footnote-back">↩</a></p></li>
-</ol>
+<aside id="foofn1"><p><a href="#foofnref1" class="footnote-back">1.</a> Has a footnote.</p></aside>
 </section>
 ```
