Add publisher option to latex template

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -328,6 +328,9 @@ $if(institute)$
 \institute{$for(institute)$$institute$$sep$ \and $endfor$}
 $endif$
 \date{$date$}
+$if(publishers)$
+\publishers{$publishers$}
+$endif$
 $if(beamer)$
 $if(titlegraphic)$
 \titlegraphic{\includegraphics{$titlegraphic$}}
